@@ -1,5 +1,10 @@
 2009-04-01  Jb Evain  <jbevain@novell.com>
 
+	* Mono.Cecil/ModuleDefinition.cs (Import): add overloads
+	taking a MethodDefinition as a generic context.
+
+2009-04-01  Jb Evain  <jbevain@novell.com>
+
 	* Mono.Cecil/ReflectionHelper.cs: throw proper exception
 	when importing in an invalid context.
 
